add css to task

--- a/src/app/events/add-event-type/add-event-type.component.html
+++ b/src/app/events/add-event-type/add-event-type.component.html
@@ -1,5 +1,7 @@
 
-
+<app-nav-bar></app-nav-bar>
+<div id="background"  >
+        <div id="backgroundIN" >
 
       <div >
         
@@ -52,3 +54,5 @@
     
     
     
+</div>
+</div>
