--- a/src/app/events/select-attribute-for-update/select-attribute-for-update.component.html
+++ b/src/app/events/select-attribute-for-update/select-attribute-for-update.component.html
@@ -1,3 +1,7 @@
+<app-nav-bar></app-nav-bar>
+<div id="background"  >
+        <div id="backgroundIN" >
+
 <div class="wrapper  col-md-8 container">
         
   
@@ -84,4 +88,6 @@
   
 
 
+  </div>
+  </div>
   </div>
