--- a/src/app/events/select-attribute-registration/select-attribute-registration.component.html
+++ b/src/app/events/select-attribute-registration/select-attribute-registration.component.html
@@ -1,3 +1,6 @@
+<app-nav-bar></app-nav-bar>
+<div id="background"  >
+        <div id="backgroundIN" >
 <div >
         
   
@@ -77,4 +80,6 @@
 
 
 
+</div>
+</div>
 </div>
