--- a/src/app/shared-module/nav-bar/nav-bar.component.html
+++ b/src/app/shared-module/nav-bar/nav-bar.component.html
@@ -98,7 +98,7 @@
    <a class="nav-item dropdown" *ngIf="Employee"  >
 
       
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a  class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
      {{Employee.empName}}
     </a>
     <div id="drop" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
@@ -109,9 +109,10 @@
    
   </a>
   <a>
-    <img *ngIf="!Employee.empProfilePicture" src="assets/_image/nodp.jpg" id="profilePicture" id="zoom2" height="50em" width="50em" alt="User Icon" class="rounded-circle margin-left ml-2">
-    <img *ngIf="Employee.empProfilePicture" [src]= "ImageUrl+Employee.empProfilePicture" id="profilePicture" id="zoom2" height="50em" width="50em" alt="User Icon" class="rounded-circle margin-left ml-2">
-
+    <div>
+    <img *ngIf="!Employee" src="assets/_image/nodp.jpg" id="profilePicture" id="zoom2" height="50em" width="50em" alt="User Icon" class="rounded-circle margin-left ml-2">
+    <img  *ngIf="Employee" [src]= "ImageUrl+Employee.empProfilePicture" id="profilePicture" id="zoom2" height="50em" width="50em" alt="User Icon" class="rounded-circle margin-left ml-2">
+  </div>
  </a>
   <span class="navbar-text">
  </span>
