--- a/src/app/events/add-registration-form/add-registration-form.component.html
+++ b/src/app/events/add-registration-form/add-registration-form.component.html
@@ -1,3 +1,6 @@
+<app-nav-bar></app-nav-bar>
+<div id="background"  >
+        <div id="backgroundIN" >
 <div >
         
   <div  class="wrapper col-md-8 container">
@@ -128,7 +131,8 @@
   </div>
 
 
-
+</div>
+</div>
 
 
 
