--- a/src/app/events/employee-registration/employee-registration.component.html
+++ b/src/app/events/employee-registration/employee-registration.component.html
@@ -1,4 +1,5 @@
 
+
      <div >
         
       <div  class="wrapper col-sm-8 container">
@@ -108,7 +109,7 @@
              
               <div class="btn-group" role="group" aria-label="Basic example">
               <!-- <button type="button" class="btn btn-danger" (click)="redirectToOwnerList()">Cancel</button> -->
-              <button type="submit" class="btn btn-success" [disabled]="!EventForm.valid">Register</button>
+              <button type="submit" class="btn" id="btn" [disabled]="!EventForm.valid">Register</button>
               <div class="col-sm-1"></div>
                
           </div> 
