--- a/src/app/events/select-attribute-for-update/select-attribute-for-update.component.css
+++ b/src/app/events/select-attribute-for-update/select-attribute-for-update.component.css
@@ -2,3 +2,19 @@
     text-align: center;
     display: inline-block
 }
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('../../../assets/Back/back2.jpg');
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%;
+  }
