--- a/src/app/events/select-attribute/select-attribute.component.html
+++ b/src/app/events/select-attribute/select-attribute.component.html
@@ -1,3 +1,6 @@
+<app-nav-bar></app-nav-bar>
+<div id="background"  >
+        <div id="backgroundIN" >
 <div class="wrapper  col-md-8 container" >
         
   
@@ -89,7 +92,8 @@
 
 
   </div>
-
+</div>
+</div>
 
 
 
