--- a/src/app/events/update-event/update-event.component.css
+++ b/src/app/events/update-event/update-event.component.css
@@ -1,3 +1,21 @@
+
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('./../../../assets/Back/back2.jpg');
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%;
+  }
+
 form{
     padding: 10px;
     margin: 10px;
