--- a/src/app/events/view-event-page/view-event-page.component.html
+++ b/src/app/events/view-event-page/view-event-page.component.html
@@ -1,13 +1,27 @@
-<!-- <app-logged-header></app-logged-header> -->
 
 <app-nav-bar></app-nav-bar>
 
+<div id="background" *ngIf="event"  >
+    <div id="backgroundIN" >
 <br/><br/>
 
-<section>
+
+
+  <section>
     <div class="container">
       <div class="card">
-        
+        <div class="row">
+          <div class="col-md-6 col-sm-10">
+            <br>
+              <h1 id="h1" class="card-title">{{event.eventTitle}}</h1>
+          </div>
+          <div class="col-md-6 col-sm-10" >
+            <br>
+              <h4 id="h2" class="card-text">Date: {{event.startDate | date}}</h4>
+              <h3 id="h2" *ngIf="destination"class="card-text">Destination: {{event.destination}}</h3>
+              <h3 id="h2" *ngIf="venue" class="card-text">Venue: {{event.venue}}</h3>
+          </div>
+        </div>
   
         <div class="row">           
           <div class="col-md-6">
@@ -15,15 +29,10 @@
             <div class="card-block" id="dis">
               <br/>
              
-              
+              <p class="card-text">{{event.eventDescription}}</p>
               
             
-              <h1 class="card-title">{{event.eventTitle}}</h1>
-              <br/>
-              <h5 class="card-text">{{event.eventDescription}}</h5>
-                  <h5 id="h2" class="card-text">Date: {{event.startDate | date}}</h5>
-                  <h5 id="h2" *ngIf="destination"class="card-text">Destination: {{event.destination}}</h5>
-                  <h5 id="h2" *ngIf="venue" class="card-text">Venue: {{event.venue}}</h5>
+
               <p *ngIf="closingDate" class="card-text">Registration Closing Date: {{event.closingDate | date}}</p>
               <p class="card-text" *ngIf="endDate">EndDate of Event: {{event.endDate | date}}</p>
               <p class="card-text" *ngIf="isFamilyMembersAllowed">Whether Family Members Allowed: {{event.isFamilyMembersAllowed}}</p>
@@ -43,7 +52,6 @@
       </div>
     </div>
   </section>
-
 <br/><br/>
 
 
@@ -57,13 +65,9 @@
       <div class="col-sm-1">
           <button type="button" class="btn btn-link"(click)="addRegistrationForm()" *ngIf="this.form===null">Add Registration Form</button>
           <button type="button" class="btn btn-link"(click)="updateEvent()">Update Event</button>
-<<<<<<< HEAD
-          <button type="button" class="btn btn-link" (click)="viewEmployee()" *ngIf="this.form!=null">View Registered Employees</button>
-=======
           <!-- <button type="button" class="btn btn-link" (click)="deleteEmployee(content)" *ngIf="this.form!=null">Delete Registered Employee</button> -->
           <button type="button" class="btn btn-link" (click)="viewEmployee()">View Registered Employees</button>
-          <button type="button" class="btn btn-link" (click)="registerEmployee()">Add Registered Employees</button>
->>>>>>> 806fc800608ba13a3e7e0c76cd7782daea016c98
+          <!-- <button type="button" class="btn btn-link" (click)="registerEmployee()">Add Registered Employees</button> -->
         </div>
 </div>
 <br/><br/>
@@ -88,4 +92,5 @@
 
                 
               
-  
+  </div>
+  </div>
