--- a/src/app/events/view-poll/view-poll.component.css
+++ b/src/app/events/view-poll/view-poll.component.css
@@ -1,3 +1,19 @@
 .card-img-top{
     height: 350px;
 }
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('./../../../assets/Back/back2.jpg');
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%;
+  }
