--- a/src/app/events/view-poll/view-poll.component.html
+++ b/src/app/events/view-poll/view-poll.component.html
@@ -1,6 +1,10 @@
+<app-nav-bar></app-nav-bar>
 
-<div  class="wrapper col-md-2 container">
-<div class="card" style="width: 50rem;">
+<div id="background"  >
+    <div id="backgroundIN" >
+<div *ngIf="poll"  >
+<div  class="wrapper col-md-7 container">
+<div class="card" style="width: 100%;">
     <img class="card-img-top" src="assets/_image/vote 1.jpg" alt="Card image cap">
     <div class="card-body">
       <div class=row>
@@ -22,14 +26,30 @@
          <td></td>
        </tr>
          
-          <tr *ngFor="let i of destinations;">
+          <tr  *ngFor="let i of destinations;">
             
-          <td>{{i.dest}}</td>
-          <td >{{i.destVote}}</td>
-          <td ><button type="button" class="btn" (click)="vote(i.id,i.destVote,i.dest)">Vote</button></td>
-          
+          <td *ngIf="i.dest!=null">{{i.dest}}</td>
+          <td *ngIf="i.dest!=null" >{{i.destVote}}</td>
+          <td *ngIf="i.dest!=null" ><button  type="button" class="btn" (click)="vote(i.id,i.destVote,i.dest)">Vote</button></td>
+    
           </tr>
           </table> 
     </div>
   </div>
+</div>
+</div>
+
+<div *ngIf="!poll">
+  <br><br>
+    <div class="wrapper col-md-7 container" >
+      <div class="card" style="width: 100%;">
+        <img class="card-img-top" src="assets/_image/vote 1.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h3>  No poll added yet. Add a new poll</h3>
+          <button class="btn" (click)="addPoll()">Add New Poll</button>
+        </div>
+    </div>
+    </div>
+</div>
+</div>
 </div>
