--- a/src/app/task/contacts/contacts.component.css
+++ b/src/app/task/contacts/contacts.component.css
@@ -1,33 +1,34 @@
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('/../../../assets/Back/back5.jpg');
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 750px;
+  }
+  #backgroundIN{
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%;
+  }
+  
+
 #card{
-    background-color: aliceblue;
-    height: 10em;
+    background-color: rgba(240, 248, 255, 0.726);
+    min-height: 10em;
 }
 #cardAdd{
     background-color: rgba(0, 0, 0, 0.39);
-    height: 10em;
+  min-height: 10em
+}
+#label{
+    text-align: left;
 }
 
-form{
-    padding: 10px;
-    margin: 10px;
-}
-#msg{
-    color: rgb(180, 3, 3);
-    text-align: center;
-}
-em{
-    color: red;
-}
-h2{
-    color: brown;
-    text-align: center;
-}
-.card{
-    background-color: rgba(247, 247, 247, 0.582);
-}
-.card label{
-    background-color: rgba(240, 248, 255, 0);
-}
-.card input {
-    background-color: rgba(240, 248, 255, 0);
+#topic{
+    text-align:center;
 }
