--- a/src/app/events/cricketmatchs/email-alert/email-alert.component.html
+++ b/src/app/events/cricketmatchs/email-alert/email-alert.component.html
@@ -7,8 +7,23 @@
         <br>
         <h3>Email of Captain Email...</h3>
     </div>
-    <button type="button" class="btn btn-success" (click)="composeMail()">Compose Mail</button>
-<br>
+    <br>
+
+    <div class="card text-center" *ngIf="!details.id">
+        <div class="card-header">  
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Add Email for Captains</h5>
+          <p class="card-text">There are no email send to captains...</p>
+          <button type="button" class="btn btn-success" (click)="composeMail()">Compose Mail</button>      
+        </div>
+        <div class="card-footer text-muted">
+        </div>
+    </div>    
+
+    <div *ngIf="details.id">
+            <button type="button" class="btn btn-success" (click)="composeMail()">Compose Mail</button>      
+            <br><br>
     <!-- Start send email -->
     <div class="row">
 
@@ -29,5 +44,9 @@
         </div>
     </div>
     <!-- End send email -->
-
+    </div>
 </div>
+
+
+
+
